--- a/server/package.json
+++ b/server/package.json
@@ -5,10 +5,11 @@
   "repository": "https://github.com/antonioLuis23/hitospace.git",
   "author": "Antonio <antonio_luis@outlook.com>",
   "license": "MIT",
-  "devDependencies": {},
+  "devDependencies": {
+    "@types/node": "^16.10.3",
+    "typescript": "^4.4.3"
+  },
   "dependencies": {
-    "@commitlint/cli": "^13.2.0",
-    "@commitlint/config-conventional": "^13.2.0",
     "husky": "^7.0.2"
   }
 }
