--- a/server/package.json
+++ b/server/package.json
@@ -7,9 +7,20 @@
   "license": "MIT",
   "devDependencies": {
     "@types/node": "^16.10.3",
+    "@typescript-eslint/parser": "4.33.0",
+    "eslint-config-airbnb": "18.2.1",
+    "eslint-config-prettier": "8.3.0",
+    "eslint-plugin-prettier": "4.0.0",
+    "prettier": "2.4.1",
     "typescript": "^4.4.3"
   },
   "dependencies": {
+    "@typescript-eslint/eslint-plugin": "4.33.0",
+    "eslint": "8.0.0",
+    "eslint-config-standard-with-typescript": "^21.0.1",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^5.0.0",
     "husky": "^7.0.2"
   }
 }
