--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
     "eslint-config-airbnb": "18.2.1",
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-prettier": "4.0.0",
+    "lint-staged": "^11.2.2",
     "prettier": "2.4.1",
     "typescript": "^4.4.3"
   },
