--- a/server/package.json
+++ b/server/package.json
@@ -6,13 +6,16 @@
   "author": "Antonio <antonio_luis@outlook.com>",
   "license": "MIT",
   "devDependencies": {
+    "@types/jest": "^27.0.2",
     "@types/node": "^16.10.3",
     "@typescript-eslint/parser": "4.33.0",
     "eslint-config-airbnb": "18.2.1",
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-prettier": "4.0.0",
+    "jest": "^27.2.5",
     "lint-staged": "^11.2.2",
     "prettier": "2.4.1",
+    "ts-jest": "^27.0.5",
     "typescript": "^4.4.3"
   },
   "dependencies": {
@@ -23,5 +26,8 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.0.0",
     "husky": "^7.0.2"
+  },
+  "scripts": {
+    "test": "jest"
   }
 }
