--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "dependencies": {
     "@commitlint/cli": "^13.2.0",
-    "@commitlint/config-conventional": "^13.2.0"
+    "@commitlint/config-conventional": "^13.2.0",
+    "lint-staged": "^11.2.2"
   }
 }
