feat: ensure EmailValidatorAdapter returns false if validator returns false

--- a/server/package.json
+++ b/server/package.json
@@ -28,7 +28,11 @@
     "husky": "^7.0.2"
   },
   "scripts": {
-    "test": "jest --watch",
-    "test:staged":"jest"
+    "test": "jest --silent --noStackTrace --runInBand",
+    "test:verbose": "jest --runInBand",
+    "test:unit": "yarn test --watch -c jest-unit-config.ts",
+    "test:integration": "yarn test --watch -c jest-integration-config.ts",
+    "test:staged":"yarn test --findRelatedTests",
+    "test:ci":"yarn test --coverage"
   }
 }
