--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,7 @@
   "devDependencies": {
     "@types/jest": "^27.0.2",
     "@types/node": "^16.10.3",
+    "@types/validator": "^13.6.3",
     "@typescript-eslint/parser": "4.33.0",
     "eslint-config-airbnb": "18.2.1",
     "eslint-config-prettier": "8.3.0",
@@ -25,14 +26,15 @@
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.0.0",
-    "husky": "^7.0.2"
+    "husky": "^7.0.2",
+    "validator": "^13.6.0"
   },
   "scripts": {
     "test": "jest --silent --noStackTrace --runInBand",
     "test:verbose": "jest --runInBand",
     "test:unit": "yarn test --watch -c jest-unit-config.ts",
     "test:integration": "yarn test --watch -c jest-integration-config.ts",
-    "test:staged":"yarn test --findRelatedTests",
-    "test:ci":"yarn test --coverage"
+    "test:staged": "yarn test --findRelatedTests",
+    "test:ci": "yarn test --coverage"
   }
 }
