--- a/server/package.json
+++ b/server/package.json
@@ -6,6 +6,7 @@
   "author": "Antonio <antonio_luis@outlook.com>",
   "license": "MIT",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/jest": "^27.0.2",
     "@types/node": "^16.10.3",
     "@types/validator": "^13.6.3",
@@ -21,6 +22,7 @@
   },
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "4.33.0",
+    "bcrypt": "^5.0.1",
     "eslint": "8.0.0",
     "eslint-config-standard-with-typescript": "^21.0.1",
     "eslint-plugin-import": "^2.22.1",
