--- a/server/package.json
+++ b/server/package.json
@@ -6,8 +6,10 @@
   "author": "Antonio <antonio_luis@outlook.com>",
   "license": "MIT",
   "devDependencies": {
+    "@shelf/jest-mongodb": "^2.1.0",
     "@types/bcrypt": "^5.0.0",
     "@types/jest": "^27.0.2",
+    "@types/mongodb": "^4.0.7",
     "@types/node": "^16.10.3",
     "@types/validator": "^13.6.3",
     "@typescript-eslint/parser": "4.33.0",
@@ -29,6 +31,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.0.0",
     "husky": "^7.0.2",
+    "mongodb": "^4.1.3",
     "validator": "^13.6.0"
   },
   "scripts": {
