--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,7 @@
   "devDependencies": {
     "@shelf/jest-mongodb": "^2.1.0",
     "@types/bcrypt": "^5.0.0",
+    "@types/express": "^4.17.13",
     "@types/jest": "^27.0.2",
     "@types/mongodb": "^4.0.7",
     "@types/node": "^16.10.3",
@@ -19,6 +20,7 @@
     "jest": "^27.3.0",
     "lint-staged": "^11.2.2",
     "prettier": "2.4.1",
+    "sucrase": "^3.20.3",
     "ts-jest": "^27.0.7",
     "typescript": "^4.4.4"
   },
@@ -30,11 +32,13 @@
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.0.0",
+    "express": "^4.17.1",
     "husky": "^7.0.2",
     "mongodb": "^4.1.3",
     "validator": "^13.6.0"
   },
   "scripts": {
+    "start":"sucrase-node src/main/server.ts",
     "test": "jest --silent --noStackTrace --runInBand",
     "test:verbose": "jest --runInBand",
     "test:unit": "yarn test --watch -c jest-unit-config.ts",
