--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
     "@types/jest": "^27.0.2",
     "@types/mongodb": "^4.0.7",
     "@types/node": "^16.10.3",
+    "@types/supertest": "^2.0.11",
     "@types/validator": "^13.6.3",
     "@typescript-eslint/parser": "4.33.0",
     "eslint-config-airbnb": "18.2.1",
@@ -21,6 +22,7 @@
     "lint-staged": "^11.2.2",
     "prettier": "2.4.1",
     "sucrase": "^3.20.3",
+    "supertest": "^6.1.6",
     "ts-jest": "^27.0.7",
     "typescript": "^4.4.4"
   },
@@ -38,7 +40,7 @@
     "validator": "^13.6.0"
   },
   "scripts": {
-    "start":"sucrase-node src/main/server.ts",
+    "start": "sucrase-node src/main/server.ts",
     "test": "jest --silent --noStackTrace --runInBand",
     "test:verbose": "jest --runInBand",
     "test:unit": "yarn test --watch -c jest-unit-config.ts",
