--- a/server/package.json
+++ b/server/package.json
@@ -35,6 +35,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.0.0",
     "express": "^4.17.1",
+    "fast-glob": "^3.2.7",
     "husky": "^7.0.2",
     "mongodb": "^4.1.3",
     "validator": "^13.6.0"
